# TELIUM

./: README.txt  SECURITY.md  art  craw.py  main.py  pyproject.toml  text_check.py  users.py
.github/workflows/: codeql-analysis.yml
Charles_Darwin/: module1.txt  module10.txt  module11.txt  module12.txt  module13.txt  module14.txt  module15.txt  module16.txt  module17.txt  module18.txt  module2.txt  module4.txt  module5.txt  module6.txt  module7.txt  module8.txt  module9.txt
text check/: rude.txt
